--- a/src/components/ui/Navbar.module.css
+++ b/src/components/ui/Navbar.module.css
@@ -5,17 +5,13 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     padding: 1rem 2rem;
     width: 100%;
-}
-
-.navBar span {
-    font-size: x-large;
 }
 
 @media (min-width: 678px) {
     .navBar {
         padding: 1rem 4rem;
-
     }
 }
